@@ -6,7 +6,7 @@
    details.
 
    Configuration
-   $Id: config.h,v 1.20 2002/09/05 01:21:54 weaselp Exp $ */
+   $Id: config.h,v 1.21 2002/09/06 07:38:08 rabbi Exp $ */
 
 
 #ifndef _CONFIG_H
@@ -290,6 +290,8 @@ extern char ENVFROM[];
 extern char SHORTNAME[];
 extern int POOLSIZE;
 extern int RATE;
+extern int DUMMYMAILINPROBABILITY;
+extern int DUMMYMAILOUTPROBABILITY;
 extern int MIDDLEMAN;
 extern int AUTOBLOCK;
 extern char FORWARDTO[];
